Snipcart buttons now appear with 25% opacity until they are loaded. This uses the new 'faded' CSS class that no longer clashes with the existing 'invisible' CSS class.

--- a/enrol/snipcart/styles.css
+++ b/enrol/snipcart/styles.css
@@ -22,7 +22,6 @@
 }
 
 /* Don't hide snipcart actions when loaded via javascript */
-.category.with_children .snipcart-actions.invisible {
-    visibility: visible;
+.category.with_children .snipcart-actions.faded {
     opacity: 1;
 }
